--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.barbersgold">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App.MyApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/Theme.BarbersGold"
-        tools:targetApi="31">
+        android:roundIcon="@drawable/logo"
+        android:theme="@style/Theme.BarbersGold">
         <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
+            android:name=".MenuPrincipal">
+        </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".activity.MainActivity2">
+        </activity>
+        <activity
+            android:name=".activity.MainActivity">
+        </activity>
+        <activity
+            android:name=".splash.splashActivity"
+            android:exported="true"
+            android:theme="@style/splashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
