--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,11 @@
         android:roundIcon="@drawable/logo"
         android:theme="@style/Theme.BarbersGold">
         <activity
-            android:name=".MenuPrincipal">
-        </activity>
-        <activity
-            android:name=".activity.MainActivity2">
-        </activity>
-        <activity
-            android:name=".activity.MainActivity">
-        </activity>
+            android:name=".ServiciosActivity"
+            android:exported="false" />
+        <activity android:name=".MenuPrincipal"></activity>
+        <activity android:name=".activity.MainActivity2"></activity>
+        <activity android:name=".activity.MainActivity"></activity>
         <activity
             android:name=".splash.splashActivity"
             android:exported="true"
